# self-attention

./: .gitignore  embed.py  main.py  model.py  pyproject.toml  readme.md  visualize.py  weight.py
.run/: main.run.xml
